dataset1235/2025-2/1955397009/users/209087680/executions/2304143742_3974737893.log
== RUN (2025-09-02 12:37:44)
-- CODE: 
x=float(input())
y=float(input())
if (x%y=0):
  print(x/y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 3
    if (x%y=0):
        ^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 3
    if (x%y=0):
        ^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 3
    if (x%y=0):
        ^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 3
    if (x%y=0):
        ^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 3
    if (x%y=0):
        ^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 3
    if (x%y=0):
        ^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:40:00)
-- CODE: 
x=int(input())
y=int(input())
z=x%y
if (z == 0):
  print(x/y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:39:32)
-- CODE: 
x=int(input())
y=int(input())
z=x%y
if (z == 0):
  print(x/y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:41:35)
-- CODE: 
x=int(input())
y=int(input())
z=x%y
if (z == 0):
  print(round(x/y))
  print("sim")
else:
  print(round(x//y),0)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:38:23)
-- CODE: 
x=float(input())
y=float(input())
z=x%y
if (z=0):
  print(x/y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 4
    if (z=0):
        ^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 4
    if (z=0):
        ^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 4
    if (z=0):
        ^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 4
    if (z=0):
        ^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 4
    if (z=0):
        ^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 4
    if (z=0):
        ^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:41:59)
-- CODE: 
x=int(input())
y=int(input())
z=x%y
if (z == 0):
  print(round(x/y))
  print("sim")
else:
  print(round(x//y,0))
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:41:27)
-- CODE: 
x=int(input())
y=int(input())
z=x%y
if (z == 0):
  print(round(x/y))
  print("sim")
else:
  print(round(x//y),0)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:43:45)
-- CODE: 
x=int(input())
y=int(input())
z=x%y
if (z == 0):
  print(round(x//y))
  print("sim")
else:
  print(round(x%y,0))
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 12:38:42)
-- CODE: 
x=float(input())
y=float(input())
z=x%y
if (z == 0):
  print(x/y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 12:38:53)
-- CODE: 
x=float(input())
y=float(input())
z=x%y
if (z == 0):
  print(x/y)
  print("sim")
else:
  print(x%y)
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
